[gd_scene load_steps=10 format=2]

[ext_resource path="res://gfx/gui/heat_dial/amber_light.png" type="Texture" id=1]
[ext_resource path="res://gfx/gui/heat_dial/chevrons.png" type="Texture" id=2]
[ext_resource path="res://gfx/gui/heat_dial/heat_border.png" type="Texture" id=3]
[ext_resource path="res://gfx/gui/heat_dial/heat_bar_background.png" type="Texture" id=4]
[ext_resource path="res://gfx/gui/heat_dial/green_light.png" type="Texture" id=5]
[ext_resource path="res://gfx/gui/heat_dial/red_light.png" type="Texture" id=6]
[ext_resource path="res://gfx/gui/heat_dial/heat_bar.png" type="Texture" id=7]
[ext_resource path="res://scenes/PlayerUI/controls/heat_dial/HeatDial.gd" type="Script" id=8]
[ext_resource path="res://gfx/gui/heat_dial/chevrons_left.png" type="Texture" id=9]

[node name="HeatDial" type="Node2D"]
script = ExtResource( 8 )

[node name="Border" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="HeatBackground" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 4 )

[node name="HeatBar" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false
offset = Vector2( -24, -24 )
region_enabled = true
region_rect = Rect2( 0, 0, 0, 15 )

[node name="ChevronRight" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( 1, -5 )
region_enabled = true
region_rect = Rect2( 0, 0, 24, 9 )

[node name="ChevronLeft" type="Sprite" parent="."]
texture = ExtResource( 9 )
centered = false
offset = Vector2( -25, -5 )
region_enabled = true
region_rect = Rect2( 0, 0, 24, 9 )

[node name="TempNozzle" type="Node2D" parent="."]
position = Vector2( -13, 0 )

[node name="Green" type="Sprite" parent="TempNozzle"]
texture = ExtResource( 5 )
offset = Vector2( 0, 15 )

[node name="Amber" type="Sprite" parent="TempNozzle"]
visible = false
position = Vector2( 0, 15 )
texture = ExtResource( 1 )

[node name="Red" type="Sprite" parent="TempNozzle"]
visible = false
position = Vector2( 0, 15 )
texture = ExtResource( 6 )

[node name="TempInjection" type="Node2D" parent="."]
position = Vector2( 13, 0 )

[node name="Green" type="Sprite" parent="TempInjection"]
texture = ExtResource( 5 )
offset = Vector2( 0, 15 )

[node name="Amber" type="Sprite" parent="TempInjection"]
visible = false
position = Vector2( 0, 15 )
texture = ExtResource( 1 )

[node name="Red" type="Sprite" parent="TempInjection"]
visible = false
position = Vector2( 0, 15 )
texture = ExtResource( 6 )
